# reading-memory-agent

./: .env.example  .gitignore  PROJECT_PLAN.md  notes.md  pyproject.toml  requirements.txt
app/: config.py
app/agent/: answer_generator.py  citation_builder.py
app/ingestion/: build_index.py  chunking.py  load_epub.py  normalize.py
app/models/: schemas.py
app/prompts/: answer_with_citations.md
app/retrieval/: local_embeddings.py  vector_retriever.py
scripts/: ingest_books.py  inspect_chunking.py  rebuild_index.py  run_cli.py
tests/: test_chunking.py  test_citations.py  test_load_epub.py  test_retrieval.py
